Fix dashboard header issue on small screen devices(<480px) (#434)

--- a/frontend/src/css/modules/header.scss
+++ b/frontend/src/css/modules/header.scss
@@ -3,3 +3,9 @@
 .ev-header-overflow {
 	margin-top: -2px;	
 }
+
+.med-link {
+    i {
+        height: auto;
+    }
+}
